--- a/src/test/resources/sg_internal_users.yml
+++ b/src/test/resources/sg_internal_users.yml
@@ -74,3 +74,6 @@ writer:
   hash: $2a$12$LZvbDVnegkTbEFTu9hHnWO4HIrdB9rGaKcEOID5n0VV4j58cnvyZ.
 dlsnoinvest:
   hash: $2a$12$9Zr4IgoJRqK6xJq4xjoa6OZAnY4QOQ6xIhcCxeYoQtB/HriMkeJSC
+restoreuser:
+  hash: "$2a$12$JU2QjYVTlI24Q/enEOpf2uTLCPGchN.eXWCsrBiieUcRoeh53NB0y"
+  #password is: restoreuser
